	- `plotClustersTable` for plotting a heatmap showing the results of `tableClusters`
	- `subsetByCluster` for subsetting CE object to only those samples in a particular cluster(s) of a clustering.
	- `plotFeatureScatter` for a scatter plot of 2+ features (genes) colored by cluster
* Added arguments:
	- `whichAssay` to all functions to allow the user to select the assay on which the operations will be performed.
	- `stopOnErrors` to `RSEC`
	- `nColLegend` to `plotReducedDims`
	- `subsample` and `sequential` to `RSEC` to allow for opting out of those options (but default is `TRUE` unlike `clusterMany`)
	- `nBlankSamples` and `groupsOfSamples` to `makeBlankData` to allow for separating samples (columns)
	- `add` and `location` to `plotClusterLegend`
* `makeBlankData` will now allow for making blank columns to separate groups of samples.
* `plotDendrogram` now allows for plotting of `colData` (previously `sampleData`) like `plotHeatmap` or `plotClusters`
* Removed restriction in `plotClustersWorkflow` that only `clusterType="clusterMany"` allowed.
* Allow `getClusterManyParams` to search old `clusterMany` runs as well.
* Added `table` method to `plotHeatmap` (for plotting heatmap of results of `table` function)
* Added error catch if try to give argument `whichCluster` to `mergeCluster`.
* Added error catch if give param `whichClusters` to functions that only take `whichCluster` (singular) as an argument
* `plotFeatureBoxplot` now returns (invisibly) the colors and clusterIds along with the boxplot information.

Bugs:
* Add check for merge_nodeMerge table that `mergeClusterId` column can't be NA for entries where `isMerged=TRUE`
* Fix internal .makeIntegerClusters so that if given values `1:K` for input clustering will retain these same values (Issue #227)
* `mergeClusters` now returned object saves the merge information (and deletes old info and updates clusterType/clusterLabel of existing merge clusters), even if `mergeMethod="none"`. 