@@ -436,3 +436,16 @@ test_that("tableClusters works",{
 	expect_silent(tableClusters(ccNamed,whichClusters=c(1,2),tableMethod="intersect",useNames=FALSE))
 	expect_silent(tableClusters(ccNamed,whichClusters=c(1,2),tableMethod="intersect",useNames=TRUE))
 })
+test_that("adding to colData works",{
+	expect_silent(df1<-colDataClusters(ccSE,"Cluster1",useNames=FALSE,makeFactor=FALSE))
+	expect_true(is.numeric(df1$Cluster1))
+	expect_silent(df1<-colDataClusters(ccSE,"Cluster1",useNames=FALSE,makeFactor=TRUE))
+	expect_true(is.factor(df1$Cluster1))
+	expect_silent(df1<-colDataClusters(ccSE,"Cluster1",useNames=TRUE,makeFactor=FALSE))
+	expect_true(is.character(df1$Cluster1))
+	expect_silent(df1<-colDataClusters(ccSE,"Cluster1",useNames=TRUE,makeFactor=TRUE))
+	expect_true(is.factor(df1$Cluster1))
+
+	expect_silent(x1<-addToColData(ccSE,"Cluster1"))
+	expect_equal(colData(x1),colDataClusters(ccSE,"Cluster1"))
+})
